geo-15  исправление авторизации, CORS и запуск вкладки "Инфо" в админке